# aperturec

./: .gitignore  .gitlab-ci.yml  .release-please-manifest.json  Cargo.toml  LICENSE  README.md  common_build.rs  deny.toml  release-please-config.json
.cargo/: config.toml
aperturec-channel/: CHANGELOG.md  Cargo.toml
aperturec-channel/src/: gate.rs  lib.rs  tls.rs  util.rs
aperturec-channel/src/codec/: in_order.rs  mod.rs  out_of_order.rs
aperturec-channel/src/endpoint/: client.rs  mod.rs  server.rs
aperturec-channel/src/quic/: client.rs  mod.rs  server.rs
aperturec-channel/src/quic/provider/: event.rs  limits.rs
aperturec-channel/src/session/: client.rs  mod.rs  server.rs
aperturec-channel/src/transport/: datagram.rs  mod.rs  stream.rs
aperturec-client/: CHANGELOG.md  Cargo.toml  build.rs  cbindgen.toml
aperturec-client-gtk3/: CHANGELOG.md  Cargo.toml
aperturec-client-gtk3/packaging/: aperturec-client.desktop
aperturec-client-gtk3/src/: main.rs
aperturec-client-gtk4/: Cargo.toml  build.rs
aperturec-client-gtk4/docs/: macos-gtk4-best-practices.md
aperturec-client-gtk4/resources/: aperturec-client.gresource.xml
aperturec-client-gtk4/resources/css/: menu-overlay.css
aperturec-client-gtk4/resources/ui/: dialogs.ui  menu-nomm.ui  menu-windows.ui  menu.ui  window.ui
aperturec-client-gtk4/src/: image.rs  main.rs
aperturec-client-gtk4/src/gtk_app/: actions.rs  app.rs  event_loop.rs  image.rs  input.rs  keyboard_input.rs  menu.rs  mod.rs  monitors.rs  ui.rs  window.rs
aperturec-client-gtk4/src/gtk_app/keyboard_grab/: linux.rs  mod.rs  windows.rs
aperturec-client/src/: args.rs  client.rs  config.rs  ffi.rs  frame.rs  gtk3.rs  lib.rs  main.rs  metrics.rs  state.rs
aperturec-client/src/channels/: control.rs  event.rs  media.rs  mod.rs  tunnel.rs
aperturec-client/src/gtk3/: image.rs
aperturec-client/tests/: metrics_test.rs
aperturec-graphics/: CHANGELOG.md  Cargo.toml
aperturec-graphics/src/: axis.rs  boxset.rs  display.rs  geometry.rs  lib.rs  ndarray_convert.rs  partition.rs  pixel.rs  rectangle_cover.rs
aperturec-graphics/src/euclid_collections/: map.rs  mod.rs  set.rs
aperturec-metrics/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  cbindgen.toml
aperturec-metrics/src/: builtins.rs  exporters.rs  ffi.rs  lib.rs  macros.rs  measurement.rs  metrics.rs
aperturec-metrics/src/builtins/: linux.rs  non_linux.rs
aperturec-metrics/tests/: ffi.rs  metrics_init.rs
aperturec-protocol/: CHANGELOG.md  Cargo.toml  README.md  build.rs
aperturec-protocol/proto/: common.proto  control.proto  event.proto  media.proto  tunnel.proto
aperturec-protocol/src/: convenience.rs  lib.rs
aperturec-server/: CHANGELOG.md  Cargo.toml
aperturec-server/benches/tracking_buffer/: common.rs  pixels.rs  time.rs
aperturec-server/src/: lib.rs  main.rs  metrics.rs  process_utils.rs  server.rs  session.rs
aperturec-server/src/backend/: mod.rs  x.rs
aperturec-server/src/task/: backend.rs  control_channel_handler.rs  encoder.rs  event_channel_handler.rs  frame_sync.rs  malloc_trim.rs  media_channel_handler.rs  mod.rs  rate_limit.rs  tunnel_channel_handler.rs
aperturec-state-machine/: Cargo.toml  README.md
aperturec-state-machine/derive/: Cargo.toml
aperturec-state-machine/derive/src/: lib.rs
aperturec-state-machine/src/: lib.rs  macros.rs
aperturec-utils/: CHANGELOG.md  Cargo.toml
aperturec-utils/src/: auth_token.rs  channels.rs  continuity.rs  cpu_bound.rs  jxl.rs  lib.rs  log.rs  paths.rs  user_output.rs  versioning.rs
aperturec-utils/src/args/: auth_token.rs  log.rs  metrics.rs  mod.rs
channel/: Cargo.toml
channel/src/: codec.rs  gate.rs  lib.rs  tls.rs  util.rs
channel/src/codec/: in_order.rs  mod.rs  out_of_order.rs  reliable.rs  unreliable.rs
channel/src/quic/: client.rs  mod.rs  server.rs
channel/src/quic/provider/: event.rs  mod.rs
channel/src/reliable/: mod.rs  tcp.rs
channel/src/transport/: datagram.rs
channel/src/unreliable/: mod.rs  udp.rs
client/: Cargo.toml
client/packaging/debian/: aperturec-client.desktop
client/packaging/debian/maintainer-scripts/: postinit  prerm
client/src/: client.rs  frame.rs  gtk3.rs  lib.rs  main.rs  metrics.rs
client/src/gtk3/: image.rs
metrics/: Cargo.toml
metrics/script/: pg_clean.sh
metrics/src/: builtins.rs  exporters.rs  lib.rs  macros.rs  metrics.rs
protocol/: Cargo.toml  README.md  build.rs
protocol/asn1/: common_types.asn1  control_messages.asn1  event_messages.asn1  media_messages.asn1
protocol/proto/: common.proto  control.proto  media.proto
protocol/src/: common_types.rs  control_messages.rs  event_messages.rs  lib.rs  media_messages.rs
protocol/tests/: common_types.rs  control_messsages.rs  event_messages.rs  macros.rs  media_messages.rs
quic_channel/: Cargo.toml
quic_channel/src/: events.rs  gate.rs  lib.rs  tls.rs  util.rs
quic_channel/src/codec/: reliable.rs  unreliable.rs
quic_channel/src/quic/: client.rs  mod.rs  server.rs
quic_channel/src/quic/provider/: datagram.rs  mod.rs
quic_channel/src/transport/: datagram.rs  mod.rs  stream.rs
quic_client/: Cargo.toml
quic_client/src/: client.rs  gtk3.rs  main.rs  metrics.rs
quic_client/src/gtk3/: lib.rs
quic_server/: Cargo.toml
quic_server/src/: main.rs  metrics.rs  server.rs
quic_server/src/backend/: mod.rs
quic_server/src/task/: encoder.rs  event_channel_handler.rs  mod.rs
server/: Cargo.toml
server/benches/: tracking_buffer_bench.rs
server/benches/tracking_buffer/: common.rs
server/src/: lib.rs  main.rs  metrics.rs  server.rs
server/src/backend/: mod.rs  x.rs
server/src/task/: backend.rs  control_channel_handler.rs  encoder.rs  event_channel_handler.rs  flow_control.rs  frame_sync.rs  heartbeat.rs  media_channel_handler.rs  mod.rs  rate_limit.rs
state_machine/: Cargo.toml  README.md
state_machine/derive/: Cargo.toml
state_machine/derive/src/: lib.rs
state_machine/src/: lib.rs  macros.rs
trace/: Cargo.toml
trace/src/: lib.rs  log.rs  queue.rs
trace/trace-queues/: Cargo.toml
trace/trace-queues/src/: latency.rs  list.rs  main.rs  plot.rs
(+72 files in other folders)
