[workspace]
members = ["channel", "client", "graphics", "metrics", "protocol","server", "state_machine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev-optimized]
inherits = "dev"
opt-level = 3
lto = "thin"

[profile.bench]
inherits = "dev-optimized"

[patch.crates-io]
# Required for ARM builds until jpegxl-rs cuts a new release
jpegxl-rs = { git = "https://github.com/inflation/jpegxl-rs" }
