[workspace]
members = [
  "aperturec-channel",
  "aperturec-client",
  "aperturec-graphics",
  "aperturec-protocol",
  "aperturec-server",
  "aperturec-state-machine",
  "aperturec-utils"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev-optimized]
inherits = "dev"
opt-level = 3
lto = "thin"

[profile.bench]
inherits = "dev-optimized"
