[workspace]
members = [
  "aperturec-channel",
  "aperturec-client-gtk4",
  "aperturec-client",
  "aperturec-graphics",
  "aperturec-metrics",
  "aperturec-protocol",
  "aperturec-server",
  "aperturec-state-machine",
  "aperturec-utils"]
resolver = "2"

[workspace.package]
edition = "2024"
license-file = "LICENSE"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev-optimized]
inherits = "dev"
opt-level = 3
lto = "thin"

[profile.bench]
inherits = "dev-optimized"
