[package]
name = "aperturec-channel"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aperturec-protocol = { path = "../aperturec-protocol" }
aperturec-state-machine = { path = "../aperturec-state-machine" }
aperturec-metrics = { path = "../aperturec-metrics" }

anyhow = "1.0"
bytes = "1.6"
futures = "0.3"
once_cell = { version = "1.19", optional = true }
openssl = { version = "0.10" }
paste = "1.0"
pem = "3.0"
prost = "0.12"
rustls-pemfile = "2.1"
rustls-platform-verifier = "0.3"
tokio = { version = "1.37", features = ["full"] }
trait-variant = "0.1"
tracing = "0.1"

[target.'cfg(unix)'.dependencies.s2n-quic]
version = "1.44"
features = ["provider-tls-fips", "provider-tls-rustls"]

[target.'cfg(windows)'.dependencies.s2n-quic]
version = "1.44"
features = ["provider-tls-rustls"]

[dev-dependencies]
aperturec-channel = { path = ".", features = ["test-tls-material"] }
prost-types = "0.12"
rand = "0.8"
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }

[features]
test-tls-material = ["once_cell"]
