[package]
name = "aperturec-channel"
edition.workspace = true
version = "2.0.3"
license-file.workspace = true
publish = false

[dependencies]
aperturec-protocol = { path = "../aperturec-protocol" }
aperturec-metrics = { path = "../aperturec-metrics" }
aperturec-utils = { path = "../aperturec-utils" }

bytes = "1.11"
futures = "0.3"
openssl = { version = "0.10" }
paste = "1.0"
pem = "3.0"
prost = "0.14"
rustls-pemfile = "2.1"
rustls-platform-verifier = "0.6"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
trait-variant = "0.1"
tracing = "0.1"
zeroize = "1.8"

[target.'cfg(unix)'.dependencies.s2n-quic]
version = "1.72"
features = ["provider-tls-fips", "provider-tls-rustls"]

[target.'cfg(windows)'.dependencies.s2n-quic]
version = "1.72"
features = ["provider-tls-rustls"]

[dev-dependencies]
once_cell = "1.19"
prost-types = "0.14"
rand = "0.9"
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }
