[package]
name = "aperturec-client-gtk4"
description = "GTK4 implementation of the ApertureC Client"
version = "2.0.0"
edition.workspace = true
license-file.workspace = true
publish = false

build = "../common_build.rs"

[[bin]]
name = "aperturec-client"
path = "src/main.rs"

[dependencies]
aperturec-client = { path = "../aperturec-client" }
aperturec-graphics = { path = "../aperturec-graphics" }
aperturec-utils = { path = "../aperturec-utils" }

anyhow = "1.0"
async-channel = "2.5"
bytes = "1.10"
bytemuck = "1.24"
clap = "4.5"
futures = { version = "0.3", default-features = false }
gtk4 = "0.10"
keycode = "1.0"
ndarray = "0.17"
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
draw-debug = []

[target.'cfg(target_os = "macos")'.dependencies]
gdk4-macos = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
gdk4-win32 = "0.10"
windows = "0.62.2"

[package.metadata.deb]
name = "aperturec-client"
copyright = "2025, Zetier Inc."
maintainer = "ApertureC Team <aperturec@zetier.com>"
section = "x11"
assets = [
  ["target/release/aperturec-client", "/usr/bin/aperturec-client", "755"],
  ["packaging/aperturec-client.desktop", "/usr/share/applications/aperturec-client.desktop", "644"],
]

[package.metadata.generate-rpm]
name = "aperturec-client"
license = "Commercial License for ApertureC"
assets = [
  { source = "target/release/aperturec-client", dest = "/usr/bin/aperturec-client", mode = "755" },
  { source = "packaging/aperturec-client.desktop", dest = "/usr/share/applications/aperturec-client.desktop", mode = "644" }
]
