[package]
name = "aperturec-client-gtk4"
description = "GTK4 implementation of the ApertureC Client"
version = "2.0.0"
edition.workspace = true
license-file.workspace = true
publish = false

build = "build.rs"

[[bin]]
name = "aperturec-client-gtk4"
path = "src/main.rs"

[dependencies]
aperturec-client = { path = "../aperturec-client" }
aperturec-graphics = { path = "../aperturec-graphics" }
aperturec-metrics = { path = "../aperturec-metrics" }
aperturec-utils = { path = "../aperturec-utils" }

anyhow = "1"
async-channel = "2"
bytemuck = "1"
clap = "4"
gtk4 = "0.10"
keycode = "1.0"
ndarray = "0.17"
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
draw-debug = []

[target.'cfg(target_os = "macos")'.dependencies]
gdk4-macos = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
gdk4-win32 = "0.10"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }


[package.metadata.deb]
name = "aperturec-client"
copyright = "2025, Zetier Inc."
maintainer = "ApertureC Team <aperturec@zetier.com>"
section = "x11"
assets = [
  ["target/release/aperturec-client-gtk4", "/usr/bin/aperturec-client", "755"],
  ["packaging/aperturec-client.desktop", "/usr/share/applications/aperturec-client.desktop", "644"],
]

[package.metadata.generate-rpm]
name = "aperturec-client"
license = "Commercial License for ApertureC"
assets = [
  { source = "target/release/aperturec-client-gtk4", dest = "/usr/bin/aperturec-client", mode = "755" },
  { source = "packaging/aperturec-client.desktop", dest = "/usr/share/applications/aperturec-client.desktop", mode = "644" }
]
