[package]
name = "aperturec-client"
description = "ApertureC Client"
edition.workspace = true
version.workspace = true
license.workspace = true

build = "../common_build.rs"

[dependencies]
aperturec-channel = { path = "../aperturec-channel" }
aperturec-graphics = { path = "../aperturec-graphics" }
aperturec-protocol = { path = "../aperturec-protocol" }
aperturec-metrics = { path = "../aperturec-metrics" }
aperturec-utils = { path = "../aperturec-utils" }

anyhow = "1.0"
clap = { version = "4.3.22", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
crossbeam = "0.8"
derive_builder = "0.20"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
gethostname = "1.0"
gtk = "0.17.1"
jpegxl-rs = { version = "0.11", features = ["vendored"] }
keycode = "0.4.0"
ndarray = "0.16"
openssl = "0.10.64"
range-set-blaze = "0.1"
rpassword = "7.3"
secrecy = "0.10"
sysinfo = "0.33"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features=["Win32_UI_Input_KeyboardAndMouse"]}

[target.'cfg(target_os = "linux")'.dependencies]
aperturec-metrics = { path = "../aperturec-metrics", features = ["heap"] }

[features]
draw-debug = []

[package.metadata.deb]
copyright = "2024, Zetier Inc."
maintainer = "ApertureC Team <aperturec@zetier.com>"
section = "x11"
assets = [
  ["target/release/aperturec-client", "/usr/bin/aperturec-client", "755"],
  ["packaging/aperturec-client.desktop", "/usr/share/applications/aperturec-client.desktop", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/aperturec-client", dest = "/usr/bin/aperturec-client", mode = "755" },
  { source = "packaging/aperturec-client.desktop", dest = "/usr/share/applications/aperturec-client.desktop", mode = "644" }
]
 
