[package]
name = "aperturec-client"
description = "ApertureC Client library"
edition.workspace = true
version.workspace = true
license.workspace = true

build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
aperturec-channel = { path = "../aperturec-channel" }
aperturec-graphics = { path = "../aperturec-graphics" }
aperturec-protocol = { path = "../aperturec-protocol" }
aperturec-metrics = { path = "../aperturec-metrics" }
aperturec-utils = { path = "../aperturec-utils" }

anyhow = "1.0"
clap = { version = "4.3.22", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
crossbeam = "0.8"
derive_builder = "0.20"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
gethostname = "1.0"
gtk = "0.17.1"
jxl-sys = "0.1"
keycode = "0.4.0"
libc = { version = "0.2", optional = true }
ndarray = "0.16"
openssl = "0.10.64"
paste = "1.0.14"
prometheus = "0.13"
range-set-blaze = "0.1"
regex = "1.11"
rpassword = "7.3"
secrecy = "0.10"
strum = { version = "0.27", features = ["derive"] }
sysinfo = "0.33"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }

[build-dependencies]
cbindgen = { version = "0.29", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "linux")'.dependencies]
aperturec-metrics = { path = "../aperturec-metrics", features = ["heap"] }

[features]
draw-debug = []
ffi-lib = ["cbindgen", "libc"]
