[package]
name = "aperturec-client"
description = "ApertureC Client library"
edition.workspace = true
version = "0.3.0"
license-file.workspace = true
publish = false

build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
aperturec-channel = { path = "../aperturec-channel" }
aperturec-graphics = { path = "../aperturec-graphics" }
aperturec-protocol = { path = "../aperturec-protocol" }
aperturec-metrics = { path = "../aperturec-metrics" }
aperturec-utils = { path = "../aperturec-utils" }

anyhow = "1.0"
async-channel = "2.5"
clap = { version = "4.5.49", features = ["derive"] }
crossbeam = "0.8"
ctrlc = { version = "3.5", features = ["termination"] }
derive_builder = "0.20"
flate2 = { version = "1.1", features = ["zlib-ng"], default-features = false }
gethostname = "1.0"
gtk = "0.18"
jxl-sys = "0.1"
keycode = "1.0.0"
libc = { version = "0.2", optional = true }
ndarray = "0.16"
openssl = "0.10.64"
paste = "1.0.14"
prometheus = "0.14"
range-set-blaze = "0.3"
regex = "1.12"
rpassword = "7.3"
secrecy = "0.10"
strum = { version = "0.27", features = ["derive"] }
sysinfo = "0.37"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }

[build-dependencies]
cbindgen = { version = "0.29", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
] }

[features]
draw-debug = []
ffi-lib = ["cbindgen", "libc"]
