[package]
name = "aperturec-graphics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
euclid = "0.22"
image = { version = "0.25", default-features = false, features = ["rayon"] }
imageproc = { version = "0.25", default-features = false }
ndarray = { version = "0.16", features = ["rayon"] }
nshare = "0.10"
rayon = "1.10"
thiserror = "2.0"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }
