[package]
name = "aperturec-graphics"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
euclid = "0.22"
image = { version = "0.25", default-features = false }
imageproc = { version = "0.25", default-features = false }
ndarray = { version = "0.16" }
nshare = "0.10"
thiserror = "2.0"
wide = "0.7"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }
