[package]
name = "aperturec-graphics"
version = "0.1.2"
edition.workspace = true
license-file.workspace = true
publish = false

[dependencies]
euclid = "0.22"
image = { version = "0.25", default-features = false }
imageproc = { version = "0.25", default-features = false }
ndarray = { version = "0.17" }
thiserror = "2.0"
wide = "1.1"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }
