[package]
name = "aperturec-metrics"
version = "0.1.1"
edition.workspace = true
license-file.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
malloc-info = { version = "0.1.2", optional = true }
prometheus = { version = "0.14.0", features = ["push"] }
reqwest = "0.13.1"
tiny_http = "0.12.0"
tracing = "0.1"
whoami = "1.6"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = "0.37"

[target.'cfg(target_os = "macos")'.dependencies]
sysinfo = "0.37"

[dev-dependencies]
paste = "1.0"
tempfile = "3.23.0"
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
heap = ["dep:malloc-info"]
