[package]
name = "aperturec-protocol"
edition.workspace = true
version.workspace = true

[dependencies]
derive_builder = "0.20"
derive_more = { version = "2.0", features = ["from"] }
derive-new = "0.7"
prost = "0.13"
semver = "1.0"

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
prettyplease = "0.2"
prost-build = "0.13"
syn = { version = "2.0", features = ["visit-mut"] }
