[package]
name = "aperturec-server"
version = "1.0.0"
description = "ApertureC Server"
edition.workspace = true
license.workspace = true

build = "../common_build.rs"

[dependencies]
aperturec-channel = { path = "../aperturec-channel" }
aperturec-graphics = { path = "../aperturec-graphics" }
aperturec-protocol = { path = "../aperturec-protocol" }
aperturec-state-machine = { path = "../aperturec-state-machine" }
aperturec-metrics = { path = "../aperturec-metrics", features = ["heap"] }
aperturec-utils = { path = "../aperturec-utils" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "string"] }
console-subscriber = "0.4"
derive_builder = "0.20"
derive_more = { version = "2.0", features = ["debug"] }
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
futures = "0.3"
gethostname = "1.0"
humantime = "2.3"
jxl-sys = "0.1"
libc = "0.2"
paste = "1.0.14"
pbkdf2 = { version = "0.12", features = ["simple"] }
petname = "2.0"
prometheus = "0.14.0"
ndarray = "0.16"
nix = { version = "0.30", features = ["signal"] }
os_pipe = "1.2"
rand = { version = "0.8", features = ["std", "std_rng"] }
scan_fmt = "0.2"
secrecy = "0.10"
shlex = "1.2"
tokio = { version = "1.47", features = ["full", "rt", "signal", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync", "fs", "net"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
trait-variant = "0.1"
which = "8.0"
xcb = { version = "1.6.0", features = ["composite", "damage", "randr", "xtest", "xfixes" ] }
regex = "1.11.2"
zerocopy = "0.8"

[dev-dependencies]
criterion = "0.7"
serial_test = "3.2"
tempfile = "3.23"
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }

[features]
tokio-console = []

[[bench]]
name = "tracking-buffer-time"
path = "benches/tracking_buffer/time.rs"
harness = false

[[bench]]
name = "tracking-buffer-pixels"
path = "benches/tracking_buffer/pixels.rs"
harness = false

[package.metadata.deb]
copyright = "2024, Zetier Inc."
depends = "$auto, xvfb"
maintainer = "ApertureC Team <aperturec@zetier.com>"
section = "x11"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/aperturec-server", dest = "/usr/bin/aperturec-server", mode = "755" }
]
 
