[package]
name = "aperturec-server"
version = "2.1.0"
description = "ApertureC Server"
edition.workspace = true
license-file.workspace = true
publish = false

build = "../common_build.rs"

[dependencies]
aperturec-channel = { path = "../aperturec-channel" }
aperturec-graphics = { path = "../aperturec-graphics" }
aperturec-protocol = { path = "../aperturec-protocol" }
aperturec-state-machine = { path = "../aperturec-state-machine" }
aperturec-metrics = { path = "../aperturec-metrics", features = ["heap"] }
aperturec-utils = { path = "../aperturec-utils" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "string"] }
console-subscriber = { version = "0.5", optional = true }
derive_builder = "0.20"
derive_more = { version = "2.1", features = ["debug"] }
flate2 = { version = "1.1", features = ["zlib-ng"], default-features = false }
futures = "0.3"
gethostname = "1.1"
humantime = "2.3"
jxl-sys = "0.1"
libc = "0.2"
paste = "1.0.14"
pbkdf2 = { version = "0.12", features = ["simple"] }
petname = "2.0"
prometheus = "0.14.0"
ndarray = "0.17"
nix = { version = "0.30", features = ["signal"] }
os_pipe = "1.2"
rand = { version = "0.9", features = ["std", "std_rng"] }
r2d2 = "0.8"
scan_fmt = "0.2"
secrecy = "0.10"
shlex = "1.2"
tokio = { version = "1.48", features = ["full", "rt", "signal", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync", "fs", "net"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
trait-variant = "0.1"
which = "8.0"
xcb = { version = "1.6.0", features = ["composite", "damage", "randr", "xtest", "xfixes" ] }
regex = "1.12.2"
zerocopy = "0.8"

[dev-dependencies]
criterion = "0.8"
serial_test = "3.2"
tempfile = "3.23"
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }

[features]
tokio-console = ["dep:console-subscriber"]

[[bench]]
name = "tracking-buffer-time"
path = "benches/tracking_buffer/time.rs"
harness = false

[[bench]]
name = "tracking-buffer-pixels"
path = "benches/tracking_buffer/pixels.rs"
harness = false

[package.metadata.deb]
copyright = "2024, Zetier Inc."
depends = "$auto, xvfb"
maintainer = "ApertureC Team <aperturec@zetier.com>"
section = "x11"

[package.metadata.generate-rpm]
license = "Commercial License for ApertureC"
assets = [
  { source = "target/release/aperturec-server", dest = "/usr/bin/aperturec-server", mode = "755" }
]
 
