[package]
name = "aperturec-state-machine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
aperturec-state-machine-derive = { path = "derive" }
trait-variant = "0.1"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }
