[package]
name = "aperturec-utils"
version = "0.2.0"
edition.workspace = true
license-file.workspace = true
publish = false

[dependencies]
aperturec-metrics = { path = "../aperturec-metrics" }

anyhow = "1.0"
async-channel = "2.5"
clap = { version = "4.5", features = ["derive", "env", "string"] }
crossbeam = "0.8"
directories = "6.0"
file-rotate = "0.8"
jxl-sys = "0.1"
ouroboros = "0.18"
num = "0.4"
rayon = "1.11"
secrecy = "0.10"
thiserror = "2.0"
termcolor = "1.4"
tokio = "1.49"
tracing = "0.1"
tracing-appender = "0.2"
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
version-compare = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
uname = "0.1"
