[package]
name = "aperturec-channel"
edition.workspace = true
version.workspace = true

[dependencies]
aperturec-protocol = { path = "../protocol" }
aperturec-state-machine = { path = "../state_machine" }
aperturec-metrics = { path = "../metrics" }
aperturec-trace = { path = "../trace" }
anyhow = "1.0"
bytes = "1.6"
derive_builder = "0.12"
futures = "0.3"
once_cell = { version = "1.19", optional = true }
openssl = { version = "0.10" }
pem = "3.0"
pin-project = "1.1"
prost = "0.12"
prost-types = "0.12"
rustls-pemfile = "2.1"
rustls-platform-verifier = "0.3"
tokio = { version = "1.37", features = ["full"] }
trait-variant = "0.1"

[target.'cfg(unix)'.dependencies.s2n-quic]
version = "1.41"
features = ["provider-tls-fips", "provider-tls-rustls", "unstable-provider-datagram"]

[target.'cfg(windows)'.dependencies.s2n-quic]
version = "1.41"
features = ["provider-tls-rustls", "unstable-provider-datagram"]

[dev-dependencies]
aperturec-channel = { path = ".", features = ["test-tls-material"] }
prost-types = "0.12"
rand = "0.8"

[features]
test-tls-material = ["once_cell"]
