[package]
name = "aperturec-client"
description = "ApertureC Client"
edition.workspace = true
version.workspace = true

[dependencies]
aperturec-channel = { path = "../channel" }
aperturec-graphics = { path = "../graphics" }
aperturec-protocol = { path = "../protocol" }
aperturec-state-machine = { path = "../state_machine" }
aperturec-metrics = { path = "../metrics" }

anyhow = "1.0"
build_id = "0.2.1"
clap = { version = "4.3.22", features = ["derive"] }
ctrlc = "3.4.1"
crossbeam = "0.8"
derive_builder = "0.12.0"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
gethostname = "0.4.3"
gtk = "0.17.1"
jpegxl-rs = { version = "0.10", features = ["vendored"] }
keycode = "0.4.0"
ndarray = "0.16"
openssl = "0.10.64"
paste = "1.0.14"
range-set-blaze = "0.1"
sysinfo = "0.29.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features=["Win32_UI_Input_KeyboardAndMouse"]}

[package.metadata.deb]
copyright = "2024, Zetier Inc."
maintainer = "ApertureC Team <aperturec@zetier.com>"
section = "x11"
