[package]
name = "aperturec-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
aperturec-trace = { path = "../trace", features = [] }
anyhow = "1.0"
chrono = "0.4.31"
prometheus = { version = "0.13.3", features = ["push"] }
reqwest = "0.11.22"
sysinfo = "0.29.10"
paste = "1.0.14"

[dev-dependencies]
rouille = "3.6.2"
tempfile = "3.8.1"
