[package]
name = "aperturec-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
aperturec-trace = { path = "../trace", features = [] }
anyhow = "1.0"
chrono = "0.4.31"
prometheus = { version = "0.13.3", features = ["push"] }
reqwest = "0.12.4"
sysinfo = "0.29.10"
paste = "1.0.14"
tiny_http = "0.12.0"

[dev-dependencies]
tempfile = "3.8.1"
