[package]
name = "aperturec-protocol"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
derive_builder = "0.12"
derive-new = "0.5"
pretty_assertions = "1.4"
rasn = "0.9"

[build-dependencies]
anyhow = "1.0"
asn1rs = "0.3"
bindgen = "0.65"
cc = { version = "1.0", features = ["parallel"] }
prettyplease = "0.2"
syn = { version = "2.0", features = ["full", "visit-mut", "visit", "extra-traits", "parsing"] }
