[package]
name = "aperturec-protocol"
edition.workspace = true
version.workspace = true

[dependencies]
derive_builder = "0.13"
derive_more = "0.99"
derive-new = "0.6"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
prettyplease = "0.2"
prost-build = "0.12"
syn = { version = "2.0", features = ["visit-mut"] }
